--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,9 @@
 Package: ucminf
-Version: 0.9
-Date: 2008-12-16
+Version: 1.0
+Date: 2009-02-02
 Title: UCMINF - Unconstrained Nonlinear Optimization
-Author: Stig Bousgaard Mortensen and Hans Bruun Nielsen
+Author: Hans Bruun Nielsen and Stig Bousgaard Mortensen
 Maintainer: Stig Bousgaard Mortensen <sbm@imm.dtu.dk>
 Description: The algorithm is of quasi-Newton type with BFGS updating of the inverse Hessian and soft line search with a trust region type monitoring of the input to the line search algorithm.
 Depends: numDeriv, R (>= 1.9.0)
-License: GPL version 2 or newer
-
-
+License: GPL (>= 2)
