--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ucminf
-Version: 1.0
-Date: 2009-02-02
+Version: 1.0-1
+Date: 2009-02-20
 Title: UCMINF - Unconstrained Nonlinear Optimization
 Author: Hans Bruun Nielsen and Stig Bousgaard Mortensen
 Maintainer: Stig Bousgaard Mortensen <sbm@imm.dtu.dk>
